...
                            <constraint firstItem="end-Rh-BvO" firstAttribute="top" secondItem="HNT-DC-gBT" secondAttribute="top" constant="-50" id="TYJ-WS-1E6"/>
                            <constraint firstItem="HNT-DC-gBT" firstAttribute="top" secondItem="BxE-YJ-GbW" secondAttribute="top" id="jbH-WZ-Kok"/>
                            <constraint firstItem="end-Rh-BvO" firstAttribute="leading" secondItem="BxE-YJ-GbW" secondAttribute="leading" id="mlD-Pp-ypS"/>
                            <constraint firstItem="FWy-bO-WGD" firstAttribute="top" secondItem="HNT-DC-gBT" secondAttribute="bottom" id="zQj-Ae-zGh"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="List of countries" id="CmP-JB-cYJ">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="myc-Ho-KDF">
                            <connections>
                                <action selector="addNewCountry:" destination="Tq0-zL-8wA" id="tHs-CT-u3e"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
